# LNA-Jihad

./: README.md  requirements.txt
.github/workflows/: main_lebna.yml  main_lnaapp.yml
backend/lna-app/: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  pyproject.toml  ruff.toml
backend/lna-app/lna_app/: main.py
backend/lna-app/lna_app/api/: news.py
backend/lna-app/lna_app/core/: types.py
backend/lna-app/lna_app/db/: mock_db.py  mongo.py  session.py
backend/lna-app/lna_app/models/: news.py
backend/lna-app/lna_app/schema/: schema.py
backend/lna-app/lna_app/services/: news_service.py
backend/lna-app/tests/: test_news.py  test_news_service.py  test_schema.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: Appbar.tsx  News.ts  NewsCard.tsx  NewsStack.tsx  content.ts
